####################################################################################################################################
# FV3D - Finite volume solver
# (c) 2020 | Florian Eigentler
####################################################################################################################################

####################################################################################################################################
# Add subdirecotries
#-----------------------------------------------------------------------------------------------------------------------------------
add_subdirectory( FV3D )

####################################################################################################################################
# Build target
#-----------------------------------------------------------------------------------------------------------------------------------

####################################################################################################################################
# Install target
#-----------------------------------------------------------------------------------------------------------------------------------